tests/baselines/reference/typePredicateInLoop.errors.txt
tests/cases/compiler/typePredicateInLoop.ts(17,11): error TS1345: An expression of type 'void' cannot be tested for truthiness.


==== tests/cases/compiler/typePredicateInLoop.ts (1 errors) ====
    // Repro from #12101
    
    interface Type {
      type: number;
    }
    
    interface TypeExt extends Type {
      arr: Type[];
    }
    
    const guard = (arg: Type): arg is TypeExt => arg.type === 1;
    const otherFunc = (arg1: Type, arg2: TypeExt): void => {};
    
    export function y(arg: Type): void {
      if (guard(arg)) {
        for (const ITEM of arg.arr) {
          if (otherFunc(ITEM, arg)) {
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS1345: An expression of type 'void' cannot be tested for truthiness.
          }
        }
      }
    }